Added missing libraries to makefile

--- a/example/makefile
+++ b/example/makefile
@@ -4,7 +4,7 @@ include ../definitions.mk
 COMPILER=g++
 COMPILER_FLAGS=-c -Wall --pedantic -std=c++14 -Iinclude -I../$(ENGINE_INCLUDE)
 LINKER=g++
-LINKER_FLAGS=-lglfw -lvulkan -lBulletDynamics -lBulletCollision -lLinearMath
+LINKER_FLAGS=-lglfw -lvulkan -lBulletDynamics -lBulletCollision -lLinearMath -lopenal -logg -lvorbisfile -lpthread
 
 # Project sources
 SOURCES=$(wildcard src/*.cpp)
